# super-table

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml
.cargo/: config.toml
.github/workflows/: publish.yml  quality.yml
benches/: build_large_table.rs  build_tables.rs
examples/: inner_style.rs  readme_table.rs  readme_table_no_tty.rs
src/: cell.rs  column.rs  row.rs  table.rs
src/style/: cell.rs  mod.rs  modifiers.rs  presets.rs  table.rs
src/utils/: mod.rs  spanning.rs
src/utils/formatting/: borders.rs  content_format.rs
tests/all/: add_predicate.rs  alignment_test.rs  combined_test.rs  constraints_test.rs  content_arrangement_test.rs  counts.rs  custom_delimiter_test.rs  edge_cases.rs  hidden_test.rs  inner_style_test.rs  mod.rs  modifiers_test.rs  padding_test.rs  presets_test.rs  property_test.rs  simple_test.rs  spanning_test.rs  styling_test.rs  truncation.rs  utf_8_characters.rs
