[package]
name = "super-table"
description = "Build beautiful tables. Supports content wrapping, alignment and cell spanning."
version = "1.1.0"
authors = ["Ben Rogmans <ben@amrai.nl>"]
homepage = "https://github.com/benrogmans/super-table"
repository = "https://github.com/benrogmans/super-table"
documentation = "https://docs.rs/super-table/"
license = "MIT"
keywords = ["table", "terminal", "unicode"]
readme = "README.md"
rust-version = "1.85"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[[bench]]
harness = false
name = "build_tables"

[[bench]]
harness = false
name = "build_large_table"

[[example]]
name = "no_tty"
path = "examples/readme_table_no_tty.rs"

[[example]]
name = "readme_table"
path = "examples/readme_table.rs"
required-features = ["tty"]

[[example]]
name = "inner_style"
path = "examples/inner_style.rs"
required-features = ["custom_styling"]

[features]
# For more info about these flags, please check the README.
# Everything's explained over there.
custom_styling = ["dep:ansi-str", "dep:console", "tty"]
default = ["tty"]
reexport_crossterm = ["tty"]
tty = ["dep:crossterm"]
# ---- DEVELOPMENT FLAGS ----
# This flag is for super-table development debugging!
# You usually don't need this as a user of the library.
_debug = []
# This feature is used to for integration testing of super_table.
# It exposes normally unexposed internal functionality for easier testing.
# DON'T USE. You opt in for breaking changes, as the internal API might change on minor/patch versions.
_integration_test = []

[dependencies]
unicode-segmentation = "1"
unicode-width = "0.2"

# Optional dependencies
ansi-str = { version = "0.9", optional = true }
console = { version = "0.16", optional = true }

[dev-dependencies]
criterion = "0.7"
pretty_assertions = "1"
proptest = "1"
rand = "0.9"
rstest = "0.26"

# We don't need any of the default features for crossterm.
# However, the windows build needs the windows feature enabled.
[target.'cfg(not(windows))'.dependencies]
crossterm = { version = "0.29", optional = true, default-features = false }
[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.29", optional = true, default-features = false, features = [
    "windows",
] }
